# MeloTTS

./: README.md  pyproject.toml  requirements.txt
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: guide.md
melo/: __init__.py  api.py  app.py  attentions.py  data_utils.py  download_utils.py  losses.py  models.py  modules.py  preprocess_text.py  utils.py
melo/audio/: __init__.py  mel_processing.py
melo/cli/: __init__.py  infer.py  main.py
melo/nn/: __init__.py  commons.py  models.py  transforms.py
melo/scripts/: init_downloads.py  preprocess_text.py  setup_env.sh  train.sh
melo/text/: __init__.py  chinese.py  chinese_bert.py  chinese_mix.py  cleaner.py  cleaner_multiling.py  english.py  french.py  french_bert.py  japanese_bert.py  ko_dictionary.py  spanish.py  spanish_bert.py  symbols.py
melo/text/en/: bert.py
melo/text/en/utils/: abbreviations.py  number_norm.py  time_norm.py
melo/text/english_utils/: __init__.py
melo/text/es/phonemizer/: base.py  cleaner.py  es_to_ipa.py  gruut_wrapper.py  punctuation.py
melo/text/es_phonemizer/: __init__.py
melo/text/fr/phonemizer/: base.py  cleaner.py  fr_to_ipa.py  french_abbreviations.py  gruut_wrapper.py
melo/text/fr_phonemizer/: __init__.py  punctuation.py
melo/text/jp/: core.py
melo/text/kr/: core.py  ko_dictionary.py
melo/text/zh/: mix.py  tone_sandhi.py
melo/training/: __init__.py  data_utils.py  train.py
melo/ui/: __init__.py
melo/utils/: __init__.py  config.py  core.py  download.py  split.py
tests/: __init__.py
